# tincan

./: CMakeLists.txt  README.md  build.ps1
src/: 1.colors.fs  1.colors.vs  3.3.shader.vs  cubemaps.frag  framebuffers_screen.frag  instancing.vs  main.cc  model.h  normal_visualization.gs  shader.frag  shadow_mapping.fs
